@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.7.8-dev'.freeze
-  RELEASEDATE = '2025-05-07'.freeze
+  RELEASEDATE = '2025-05-08'.freeze
 end
