@@ -220,6 +220,10 @@
 <li>
 <p><code>last_check</code> für Karten und Terminals (letztes Auffinden über den Konnektor)</p>
 </li>
+<li>
+<p>Hintergrundjob für das Aufräumen bei abgelaufenen Acknowledges insbesondere
+für Objekte, die aus anderen Gründen nicht mehr aktualisiert werden.</p>
+</li>
 </ul>
 </div>
 </div>
